# Trust-IoT

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: custom_simulation.py
src/trustiot/: cli.py  core.py  simulation.py  visualize.py
